--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -10,7 +10,7 @@
     <mat-sidenav-content>
       <div class="container">
         <div class="content">
-          <router-outlet #o="outlet"></router-outlet>
+          <app-map></app-map>
         </div>
       </div>
     </mat-sidenav-content>
