--- a/src/app/map/map.component.html
+++ b/src/app/map/map.component.html
@@ -1,8 +1,5 @@
 <div (resized)="onResized($event)">
-  <a href="javascript:;" (click)="sidebarService.toggleSidebar();" class="toggle-sidebar">
-    <fa-icon [icon]="['fal', 'ellipsis-v']" size="lg"></fa-icon>
-  </a>
-  <div class="map-floors">
+  <!--<div class="map-floors">
     <ul>
       <li>
         <span *ngIf="routingSource.finish && state.floor.level < routingSource.finish.properties.level">{{ getUpcomingFloorNumber('up') }}</span>
@@ -22,12 +19,148 @@
         </a>
       </li>
     </ul>
-  </div>
+  </div>-->
+  <button class="my-location" (click)="onMyLocation()">
+    <span class="icon"></span>
+  </button>
   <mgl-map
-    *ngIf="!state.initializing"
-    [style]="state.style"
+    *ngIf="!stateService.state.initializing"
+    [style]="stateService.state.style"
     (load)="onLoad($event)"
   >
+    <mgl-control
+      mglNavigation
+      [showZoom]="false"
+    ></mgl-control>
+    <mgl-geojson-source
+      id="my-location"
+    >
+      <mgl-feature
+        [geometry]="{
+          'type': 'Point',
+          'coordinates': stateService.state.defaultLocation
+       }"
+        [properties]="{
+          'level': 0
+        }"
+      ></mgl-feature>
+    </mgl-geojson-source>
+    <mgl-layer
+      id="my-location-layer"
+      type="symbol"
+      source="my-location"
+      [layout]="{
+        'icon-image': 'pulsing-dot'
+      }"
+      [filter]="[
+        'all',
+        ['==', ['to-number', ['get','level']], this.stateService.state.floor.level]
+      ]"
+    ></mgl-layer>
+    <mgl-layer
+      id="shop-custom"
+      type="fill-extrusion"
+      (click)="onShopClick($event)"
+      (mouseEnter)="onShopMouseEnter()"
+      (mouseLeave)="onShopMouseLeave($event)"
+      (mouseMove)="onShopMouseMove($event)"
+      [minzoom]="12"
+      [maxzoom]="24"
+      source="main"
+      [filter]="[
+        'all',
+        ['==', ['get','type'], 'shop-custom'],
+        ['==', ['to-number', ['get','level']], this.stateService.state.floor.level]
+      ]"
+      [layout]="{}"
+      [paint]="{
+      'fill-extrusion-height': 3,
+      'fill-extrusion-color': [
+        'case',
+        ['boolean', ['feature-state', 'selected'], false], '#6945ed',
+        ['boolean', ['feature-state', 'hover'], false], '#a58dfa',
+        '#dbd7e8'
+      ]
+    }"></mgl-layer>
+    <mgl-layer
+      id="poi-custom-icons"
+      type="symbol"
+      [minzoom]="17"
+      [maxzoom]="24"
+      source="main"
+      [filter]="[
+        'all',
+        ['==', ['get','type'], 'poi-custom'],
+        ['==', ['to-number', ['get','level']], this.stateService.state.floor.level]
+      ]"
+      [layout]="{
+        'icon-image': '{amenity}',
+        'icon-size': [
+          'interpolate',
+          [
+              'exponential',
+              0.5
+          ],
+          [
+              'zoom'
+          ],
+          17,
+          0.1,
+          22,
+          0.5
+      ],
+      'text-anchor': 'top',
+      'text-offset': [
+          0,
+          2
+      ],
+      'text-font': [
+          'Open Sans Regular'
+      ],
+      'text-size': 14,
+      'symbol-placement': 'point',
+      'icon-allow-overlap': true,
+      'text-allow-overlap': true
+      }"
+      [paint]="{}"></mgl-layer>
+    <mgl-layer
+      id="shop-labels"
+      type="symbol"
+      [minzoom]="12"
+      [maxzoom]="24"
+      source="main"
+      [filter]="[
+        'all',
+        ['==', ['get','type'], 'shop-label'],
+        ['==', ['to-number', ['get','level']], this.stateService.state.floor.level]
+      ]"
+      [layout]="{
+        'symbol-placement': 'line-center',
+        'text-anchor': 'top',
+        'text-ignore-placement': true,
+        'text-allow-overlap': true,
+        'text-field': '{title}',
+        'text-font': ['Open Sans Bold'],
+        'text-size': [
+          'interpolate',
+          ['exponential', 0.5],
+          ['zoom'],
+          18,
+          6,
+          22,
+          36
+        ],
+        'text-letter-spacing': 0.005,
+        'text-max-width': 7
+      }"
+      [paint]="{
+        'text-color': [
+          'case',
+          ['boolean', ['feature-state', 'selected'], false], '#fff',
+          ['boolean', ['feature-state', 'hover'], false], '#fff',
+          '#6945ed'
+        ]
+      }"></mgl-layer>
     <ng-container *ngFor="let key of objectKeys(images)">
       <mgl-image
         [id]="key"
