--- a/src/app/core/sidebar/details/details.component.scss
+++ b/src/app/core/sidebar/details/details.component.scss
@@ -33,6 +33,12 @@
     }
   }
 
+  .img-holder {
+    img {
+      width: 100%;
+    }
+  }
+
   .content {
     padding: 1rem 2rem;
     padding-right: 4rem;
