add text navigation
drop nodejs < 7.10.1 support

--- a/src/app/core/sidebar/details/details.component.html
+++ b/src/app/core/sidebar/details/details.component.html
@@ -1,4 +1,4 @@
-<div class="container">
+<div class="container" *ngIf="poi">
   <button (click)="onDetailsClose()" class="close"><fa-icon [icon]="['fal', 'times']"></fa-icon></button>
   <div class="img-holder">
     <img [src]="poi.properties.images[0] ? getImageUrl() : 'https://picsum.photos/500/300'" [alt]="poi.properties.title">
