--- a/src/app/core/sidebar/shop-picker/shop-picker.component.scss
+++ b/src/app/core/sidebar/shop-picker/shop-picker.component.scss
@@ -40,15 +40,30 @@
       margin-right: 10px;
       width: 60px;
       vertical-align: top;
+      cursor: pointer;
       .icon {
-        background-color: $default-color;
-        color: white;
+        background-color: #868686;
+        color: #fff;
         font-size: 22px;
         border-radius: 10px;
         width: 60px;
         height: 60px;
         line-height: 60px;
       }
+
+      &:hover .icon {
+        background-color: darken(#868686, 10%);
+      }
+      &.active {
+        .icon {
+          background-color: $default-color;
+          color: white;
+        }
+        &:hover .icon {
+           background-color: darken($default-color, 10%);
+        }
+      }
+
       p {
         font-size: 12px;
         margin-top: 4px;
