--- a/src/app/core/sidebar/sidebar.component.html
+++ b/src/app/core/sidebar/sidebar.component.html
@@ -1,8 +1,8 @@
 <app-search></app-search>
 <app-floor-picker></app-floor-picker>
-<ng-container *ngIf="!sidebarService.selectedEndPoi">
-  <app-shop-picker></app-shop-picker>
-  <app-amenity-picker></app-amenity-picker>
+<ng-container>
+  <app-shop-picker [hidden]="sidebarService.selectedEndPoi"></app-shop-picker>
+  <app-amenity-picker [hidden]="sidebarService.selectedEndPoi"></app-amenity-picker>
 </ng-container>
 <ng-container>
   <app-details [hidden]="!sidebarService.selectedEndPoi"></app-details>
