--- a/src/app/map/map.component.html
+++ b/src/app/map/map.component.html
@@ -48,7 +48,8 @@
       [filter]="[
         'all',
         ['==', ['get','type'], 'shop-custom'],
-        ['==', ['to-number', ['get','level']], this.stateService.state.floor.level]
+        ['==', ['to-number', ['get','level']], this.stateService.state.floor.level],
+        ['match', ['get', 'amenity'], hiddenAmenities ? hiddenAmenities : ['undefined'], false, true]
       ]"
       [layout]="{}"
       [paint]="{
@@ -69,7 +70,8 @@
       [filter]="[
         'all',
         ['==', ['get','type'], 'poi-custom'],
-        ['==', ['to-number', ['get','level']], this.stateService.state.floor.level]
+        ['==', ['to-number', ['get','level']], this.stateService.state.floor.level],
+        ['match', ['get', 'amenity'], hiddenAmenities ? hiddenAmenities : ['undefined'], false, true]
       ]"
       [layout]="{
         'icon-image': '{amenity}',
@@ -110,7 +112,8 @@
       [filter]="[
         'all',
         ['==', ['get','type'], 'shop-label'],
-        ['==', ['to-number', ['get','level']], this.stateService.state.floor.level]
+        ['==', ['to-number', ['get','level']], this.stateService.state.floor.level],
+        ['match', ['get', 'amenity'], hiddenAmenities ? hiddenAmenities : ['undefined'], false, true]
       ]"
       [layout]="{
         'symbol-placement': 'line-center',
