--- a/src/app/map/map.component.html
+++ b/src/app/map/map.component.html
@@ -48,8 +48,7 @@
       [filter]="[
         'all',
         ['==', ['get','type'], 'shop-custom'],
-        ['==', ['to-number', ['get','level']], this.stateService.state.floor.level],
-        ['match', ['get', 'amenity'], filteredAmenities ? filteredAmenities : ['undefined'], true, false]
+        ['==', ['to-number', ['get','level']], this.stateService.state.floor.level]
       ]"
       [layout]="{}"
       [paint]="{
@@ -58,6 +57,7 @@
         'case',
         ['boolean', ['feature-state', 'selected'], false], '#6945ed',
         ['boolean', ['feature-state', 'hover'], false], '#a58dfa',
+        ['boolean', ['feature-state', 'disabled'], false], '#8a8a8a',
         '#dbd7e8'
       ]
     }"></mgl-layer>
