--- a/src/app/map/map.component.scss
+++ b/src/app/map/map.component.scss
@@ -12,13 +12,12 @@
   }
 }
 
-mgl-map {
+#proximiioMap {
   width: 100%;
   height: 100%;
   min-height: 320px;
 
-  ::ng-deep .mapboxgl-map {
-    min-height: 320px;
+  ::ng-deep {
     .mapboxgl-ctrl-top-right {
       top: 100px;
       right: 20px;
