--- a/src/app/map/map.component.html
+++ b/src/app/map/map.component.html
@@ -1,4 +1,4 @@
-<div (resized)="onResized($event)">
+<div>
   <button class="my-location" (click)="onMyLocation()">
     <span class="icon"></span>
   </button>
