--- a/src/app/core/sidebar/details/details.component.scss
+++ b/src/app/core/sidebar/details/details.component.scss
@@ -195,3 +195,33 @@
     }
   }
 }
+
+@media only screen and (max-width: 959.98px) {
+  .container {
+    max-height: 260px;
+    .close {
+      right: 5px;
+      top: 5px;
+      border-radius: 10px;
+      padding: 4px 8px;
+      font-size: 16px;
+      z-index: 4;
+    }
+    .content {
+      padding: .5rem;
+      h2 {
+        font-size: 14px;
+      }
+      h4 {
+        font-size: 10px;
+      }
+      p {
+        font-size: 10px;
+      }
+      .instructions-toggle,
+      .accessible-toggle {
+        font-size: 10px;
+      }
+    }
+  }
+}
