mobile view improvements

--- a/src/app/core/sidebar/search/search.component.html
+++ b/src/app/core/sidebar/search/search.component.html
@@ -7,6 +7,7 @@
                #select
                class="custom"
                placeholder="Search"
+               dropdownPosition="bottom"
                [(ngModel)]="selectedPoi"
                [isOpen]="optionsOpen"
                [closeOnSelect]="true"
