--- a/src/app/map/map.component.html
+++ b/src/app/map/map.component.html
@@ -1,4 +1,8 @@
-<div>
+<div *ngIf="!mapLoaded" class="loading">
+  <mat-spinner diameter="150" strokeWidth="1" color="primary"></mat-spinner>
+  <h2>Welcome to the venue!</h2>
+</div>
+<div [hidden]="!mapLoaded">
   <button class="my-location" (click)="onMyLocation()">
     <span class="icon"></span>
   </button>
