hide settings button

--- a/src/app/map/map.component.html
+++ b/src/app/map/map.component.html
@@ -6,8 +6,8 @@
   <button class="my-location" (click)="onMyLocation()">
     <span class="icon"></span>
   </button>
-  <button class="settings" (click)="onSettings()">
+  <!--<button class="settings" (click)="onSettings()">
     <fa-icon [icon]="['fal', 'cog']" size="lg"></fa-icon>
-  </button>
+  </button>-->
   <div id="proximiioMap"></div>
 </div>
