--- a/src/app/map/map.component.scss
+++ b/src/app/map/map.component.scss
@@ -174,6 +174,13 @@
 }
 
 @media only screen and (max-width: 959.98px) {
+  #proximiioMap {
+    ::ng-deep {
+      .mapboxgl-ctrl-top-right {
+        display: none;
+      }
+    }
+  }
   .my-location,
   .settings {
     right: .5rem;
