update readme and initiation of demo app

--- a/src/app/core/sidebar/sidebar.component.html
+++ b/src/app/core/sidebar/sidebar.component.html
@@ -1,9 +1,9 @@
 <app-search></app-search>
 <app-floor-picker></app-floor-picker>
-<ng-container>
+<!--<ng-container>
   <app-shop-picker [hidden]="sidebarService.selectedEndPoi"></app-shop-picker>
   <app-amenity-picker [hidden]="sidebarService.selectedEndPoi"></app-amenity-picker>
-</ng-container>
+</ng-container>-->
 <ng-container>
   <app-details [hidden]="!sidebarService.selectedEndPoi"></app-details>
 </ng-container>
