--- a/src/app/map/map.component.scss
+++ b/src/app/map/map.component.scss
@@ -181,8 +181,10 @@
   position: fixed;
   right: 0;
   left: 0;
-  top: 30%;
+  top: 0;
   bottom: 0;
+  padding-top: 20%;
+  background-color: white;
 
   mat-spinner {
     margin: 2rem auto;
