add ngx-translate module

--- a/src/app/core/settings-dialog/settings-dialog.component.html
+++ b/src/app/core/settings-dialog/settings-dialog.component.html
@@ -1,33 +1,33 @@
-<h1 mat-dialog-title>Kiosk Settings</h1>
+<h1 mat-dialog-title>{{ 'kioskSettings' | translate }}</h1>
 <form [formGroup]="settingsForm">
   <div mat-dialog-content>
     <mat-form-field>
-      <input matInput type="number" placeholder="Latitude" formControlName="latitude">
-      <mat-error *ngIf="settingsForm.get('latitude').invalid">Please enter a valid latitude.</mat-error>
+      <input matInput type="number" [placeholder]="'latitude' | translate" formControlName="latitude">
+      <mat-error *ngIf="settingsForm.get('latitude').invalid">{{ 'enterValid' | translate }} {{ 'latitude' | translate }}.</mat-error>
     </mat-form-field>
     <mat-form-field>
-      <input matInput type="number" placeholder="Longitude" formControlName="longitude">
-      <mat-error *ngIf="settingsForm.get('longitude').invalid">Please enter a valid longitude.</mat-error>
+      <input matInput type="number" [placeholder]="'longitude' | translate" formControlName="longitude">
+      <mat-error *ngIf="settingsForm.get('longitude').invalid">{{ 'enterValid' | translate }} {{ 'longitude' | translate }}.</mat-error>
     </mat-form-field>
     <mat-form-field>
-      <input matInput type="number" placeholder="Level" formControlName="level">
-      <mat-error *ngIf="settingsForm.get('level').invalid">Please enter a valid level.</mat-error>
+      <input matInput type="number" [placeholder]="'level' | translate" formControlName="level">
+      <mat-error *ngIf="settingsForm.get('level').invalid">{{ 'enterValid' | translate }} {{ 'level' | translate }}.</mat-error>
     </mat-form-field>
     <mat-form-field>
-      <input matInput type="number" placeholder="Zoom" formControlName="zoom">
-      <mat-error *ngIf="settingsForm.get('zoom').invalid">Please enter a valid zoom.</mat-error>
+      <input matInput type="number" [placeholder]="'zoom' | translate" formControlName="zoom">
+      <mat-error *ngIf="settingsForm.get('zoom').invalid">{{ 'enterValid' | translate }} {{ 'zoom' | translate }}.</mat-error>
     </mat-form-field>
     <mat-form-field>
-      <input matInput type="number" placeholder="Bearing" formControlName="bearing">
-      <mat-error *ngIf="settingsForm.get('bearing').invalid">Please enter a valid bearing.</mat-error>
+      <input matInput type="number" [placeholder]="'bearing' | translate" formControlName="bearing">
+      <mat-error *ngIf="settingsForm.get('bearing').invalid">{{ 'enterValid' | translate }} {{ 'bearing' | translate }}.</mat-error>
     </mat-form-field>
     <mat-form-field>
-      <input matInput type="number" placeholder="Pitch" formControlName="pitch">
-      <mat-error *ngIf="settingsForm.get('pitch').invalid">Please enter a valid pitch.</mat-error>
+      <input matInput type="number" [placeholder]="'pitch' | translate" formControlName="pitch">
+      <mat-error *ngIf="settingsForm.get('pitch').invalid">{{ 'enterValid' | translate }} {{ 'pitch' | translate }}.</mat-error>
     </mat-form-field>
   </div>
   <div mat-dialog-actions>
-    <button mat-button (click)="onCancel()" color="warn" class="cancel">Cancel</button>
-    <button type="submit" [disabled]="!settingsForm.valid" mat-button [mat-dialog-close]="settingsForm.value" cdkFocusInitial color="primary" class="submit">Submit</button>
+    <button mat-button (click)="onCancel()" color="warn" class="cancel">{{ 'cancel' | translate }}</button>
+    <button type="submit" [disabled]="!settingsForm.valid" mat-button [mat-dialog-close]="settingsForm.value" cdkFocusInitial color="primary" class="submit">{{ 'submit' | translate }}</button>
   </div>
 </form>
