--- a/src/app/core/sidebar/details/details.component.html
+++ b/src/app/core/sidebar/details/details.component.html
@@ -1,36 +1,90 @@
 <div class="container" *ngIf="poi">
-  <button (click)="onDetailsClose()" class="close"><fa-icon [icon]="['fal', 'times']"></fa-icon></button>
+  <button (click)="onDetailsClose()" class="close">
+    <fa-icon [icon]="['fal', 'times']"></fa-icon>
+  </button>
   <div class="img-holder">
-    <img [src]="poi.properties.images[0] ? getImageUrl() : 'https://picsum.photos/500/300'" [alt]="poi.properties.title">
+    <img
+      [src]="
+        poi.properties.images[0]
+          ? getImageUrl()
+          : 'https://picsum.photos/500/300'
+      "
+      [alt]="poi.properties.title"
+    />
   </div>
   <div class="content header">
     <h2 class="title">{{ poi.properties.title }}</h2>
     <h4 class="open-hours">{{ getOpenHours() }}</h4>
-    <h4 class="level">{{ poi.properties.level + 1 | ordinal }} floor</h4>
+    <h4 class="level">
+      {{ poi.properties.level + 1 | ordinal }} {{ floor | translate }}
+    </h4>
   </div>
-  <div class="content" [ngClass]="{'accessibleOnly': stateService.state.accessibleRoute}">
+  <div
+    class="content"
+    [ngClass]="{ accessibleOnly: stateService.state.accessibleRoute }"
+  >
     <p>
-      {{ details | slice:0: limit }} {{ details.length > limit ? '...' : '' }}
-      <a *ngIf="details.length > limit" href="javascript:;" (click)="limit = details.length; showingMore = true">Show more <fa-icon [icon]="['fal', 'angle-down']"></fa-icon></a>
-      <a *ngIf="showingMore" href="javascript:;" (click)="limit = 200; showingMore = false">Show less <fa-icon [icon]="['fal', 'angle-up']"></fa-icon></a>
+      {{ details | slice: 0:limit }} {{ details.length > limit ? "..." : "" }}
+      <a
+        *ngIf="details.length > limit"
+        href="javascript:;"
+        (click)="limit = details.length; showingMore = true"
+        >{{ "showMore" | translate }}
+        <fa-icon [icon]="['fal', 'angle-down']"></fa-icon
+      ></a>
+      <a
+        *ngIf="showingMore"
+        href="javascript:;"
+        (click)="limit = 200; showingMore = false"
+        >{{ "showLess" | translate }}
+        <fa-icon [icon]="['fal', 'angle-up']"></fa-icon
+      ></a>
     </p>
-    <p><strong>Distance</strong>: {{ distanceInMeters | number: '1.0-0' }}m / {{ distanceInMinutes }}</p>
+    <p>
+      <strong>{{ "distance" | translate }}</strong
+      >: {{ distanceInMeters | number: "1.0-0" }}m /
+      {{ distanceInMinutes }}
+    </p>
 
     <button (click)="toggleInstructions()" class="instructions-toggle">
-      <fa-icon [icon]="showInstructions ? ['fal', 'angle-down'] : stateService.state.accessibleRoute ? ['fal', 'wheelchair'] : ['fal', 'route']"></fa-icon>
-      {{ showInstructions ? 'Hide' : 'Show' }} instructions
+      <fa-icon
+        [icon]="
+          showInstructions
+            ? ['fal', 'angle-down']
+            : stateService.state.accessibleRoute
+            ? ['fal', 'wheelchair']
+            : ['fal', 'route']
+        "
+      ></fa-icon>
+      {{
+        (showInstructions ? "hideInstructions" : "showInstructions") | translate
+      }}
     </button>
     <button (click)="toggleAccessibleRoute()" class="accessible-toggle">
-      <fa-icon [icon]="stateService.state.accessibleRoute ? ['fal', 'walking'] : ['fal', 'wheelchair']"></fa-icon>
-      {{ stateService.state.accessibleRoute ? 'Show fastest route' : 'Show accessible route' }}
+      <fa-icon
+        [icon]="
+          stateService.state.accessibleRoute
+            ? ['fal', 'walking']
+            : ['fal', 'wheelchair']
+        "
+      ></fa-icon>
+      {{
+        (stateService.state.accessibleRoute
+          ? "showFastestRoute"
+          : "showAccessibleRoute"
+        ) | translate
+      }}
     </button>
 
     <mat-expansion-panel [disabled]="true" [expanded]="showInstructions">
       <mat-panel-description>
         <mat-list>
           <mat-list-item *ngFor="let step of steps">
-            <p matLine> <fa-icon [icon]="step.directionIcon"></fa-icon> <fa-icon [icon]="step.stepIcon"></fa-icon></p>
-            <p matLine> {{ step.description }} </p>
+            <p matLine>
+              <fa-icon [icon]="step.directionIcon"></fa-icon>
+              <fa-icon [icon]="step.stepIcon"></fa-icon>
+            </p>
+            <p matLine>{{ step.description }}</p>
           </mat-list-item>
         </mat-list>
       </mat-panel-description>
