--- a/src/app/core/sidebar/search/search.component.html
+++ b/src/app/core/sidebar/search/search.component.html
@@ -6,7 +6,7 @@
     <ng-select ngSelectMat
                #select
                class="custom"
-               placeholder="Search"
+               [placeholder]="'searchPlaceholder' | translate"
                dropdownPosition="bottom"
                [(ngModel)]="selectedPoi"
                [isOpen]="optionsOpen"
