--- a/src/app/core/sidebar/shop-picker/shop-picker.component.html
+++ b/src/app/core/sidebar/shop-picker/shop-picker.component.html
@@ -1,11 +1,11 @@
 <div class="container" [ngClass]="{'open': sidebarOpened}">
-  <h3 class="title">Shops & Restaurants</h3>
+  <h3 class="title">{{ 'shops' | translate }}</h3>
   <ul class="categories">
     <li *ngFor="let item of data" [class.active]="item.active" (click)="onFilterClick(item)">
       <div class="icon">
         <fa-icon [icon]="item.icon"></fa-icon>
       </div>
-      <p>{{ item.title }}</p>
+      <p>{{ item.title | translate }}</p>
     </li>
   </ul>
   <div class="toggle" (click)="sidebarOpened = !sidebarOpened">
