--- a/src/app/map/map.component.html
+++ b/src/app/map/map.component.html
@@ -9,5 +9,5 @@
 </div>
 <div *ngIf="!mapLoaded" class="loading">
   <mat-spinner diameter="150" strokeWidth="1" color="primary"></mat-spinner>
-  <h2>Welcome to the venue!</h2>
+  <h2>{{ 'welcomeMessage' | translate }}</h2>
 </div>
